@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-15T02:03:45Z",
-  "count" : 9,
-  "count_minmax" : [ 7, 9 ],
-  "count_decinc" : [ -0, +9 ],
-  "uniques" : 5,
-  "uniques_minmax" : [ 5, 5 ],
-  "uniques_decinc" : [ -0, +5 ]
+  "timestamp" : "2022-07-28T08:25:25Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 9 ],
+  "count_decinc" : [ -7, +9 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 5 ],
+  "uniques_decinc" : [ -4, +5 ]
 }
