@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-07-28T01:50:09Z",
+  "timestamp" : "2022-07-28T08:25:25Z",
   "count_outdated" : 2291,
   "uniques_outdated" : 510,
-  "count" : 2326,
-  "uniques" : 531,
+  "count" : 2320,
+  "uniques" : 528,
   "clones" : [
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 7, 9 ],
-      "uniques": 5,
-      "uniques_minmax": [ 5, 5 ]
+      "count": 2,
+      "count_minmax": [ 2, 9 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 5 ]
     },
     {
       "timestamp": "2022-07-15T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-07-27T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
