@@ -1,11 +1,11 @@
 {
-  "count": 35,
-  "uniques": 11,
+  "count": 29,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 9,
-      "uniques": 5
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-07-15T00:00:00Z",
@@ -55,6 +55,11 @@
     {
       "timestamp": "2022-07-27T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-28T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
