@@ -1,3 +1,10 @@
+2022-07-28T08:25:25Z:
+* notice: last 14d: unq all: 7 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 510 2291 / 531 2326
+* notice: next accum: outdated-unq outdated-all / unq all: 510 2291 / 528 2320
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -4 -7 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-14 2022-07-28]
+
 2022-07-28T01:50:09Z:
 * notice: last 14d: unq all: 11 35
 * notice: prev accum: outdated-unq outdated-all / unq all: 505 2282 / 527 2318
